--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
       <button class="button" onclick="appendToDisplay('Math.PI')">π</button>
       <button class="button" onclick="appendToDisplay('Math.E')">e</button>
       <button class="button" onclick="calculateFactorial()">!</button>
+      <button class="button" onclick="calculatePercentage()">%</button>
+      <button class="button" onclick="calculateSquareRoot()">√</button>
+      <button class="button" onclick="appendToDisplay('**')">^</button>
+      <button class="button" onclick="appendToDisplay('nPr')">nPr</button>
+      <button class="button" onclick="appendToDisplay('nCr')">nCr</button>
 
       <!-- Separator Line -->
       <div class="separator"></div>
@@ -47,9 +52,6 @@
       <button class="button" onclick="appendToDisplay('2')">2</button>
       <button class="button" onclick="appendToDisplay('3')">3</button>
       <button class="button" onclick="appendToDisplay('0')">0</button>
-      <button class="button" onclick="calculateSquareRoot()">√</button>
-      <button class="button" onclick="appendToDisplay('**')">^</button>
-      <button class="button" onclick="calculatePercentage()">%</button>
       <button class="button" onclick="toggleSign()">±</button>
       <button class="button" onclick="calculateResult()">=</button>
 
@@ -64,6 +66,9 @@
     </div>
   </div>
 
+  <!-- History Display -->
+  <div id="history" class="history-display"></div>
+
   <!-- About Box -->
   <textarea class="about-box" readonly>
     Change Log:
@@ -77,17 +82,17 @@
 
   <!-- Moving Banner -->
   <div class="banner">
- <span class="banner-text">CalcX V2.1.2</span>
+    <span class="banner-text">CalcX V2.1.2</span>
     <span class="banner-text">Beta Pre-Release</span>
     <span class="banner-text">Out Now!</span>
   </div>
 
- <!-- Digital Clock -->
-<div class="digital-clock">
+  <!-- Digital Clock -->
+  <div class="digital-clock">
     <span id="hours">00</span>:
     <span id="minutes">00</span>:
     <span id="seconds">00</span>
-</div>
+  </div>
 
   <!-- Script -->
   <script src="script.js"></script>
